<resources>
    <string name="app_name">Acelerados</string>
    <string name="logo">logo</string>
    <string name="e_mail">e-mail</string>
    <string name="start_without_login">iniciar sem login</string>
    <string name="sign_up">cadastre-se</string>
    <string name="password">senha</string>
    <string name="login">entrar</string>
    <string name="forgot_password_click_here">Esqueceu a senha? Clique aqui.</string>
    <string name="sending_new_password">Enviaremos uma nova senha\npara o e-mail informado.\nRecomendamos redefini-la\napós recuperar sua conta.</string>
    <string name="send">enviar</string>
    <string name="store_name">nome da loja</string>
    <string name="main_phone">telefone principal</string>
    <string name="aditional_phone">telefone adicional (opcional)</string>
    <string name="cnpj">cnpj</string>
    <string name="postal_code">cep</string>
    <string name="street">rua</string>
    <string name="number">nº</string>
    <string name="complement">complemento</string>
    <string name="neighborhood">bairro</string>
    <string name="confirm_password">confirmar senha</string>
    <string name="register">cadastrar</string>
    <string name="profile">Perfil</string>
    <string name="cart">Carrinho</string>
    <string name="suppliers">Fornecedores</string>
    <string name="home">Home</string>
    <string name="search_products">buscar produtos</string>
    <string name="categories">CATEGORIAS</string>
    <string name="product">Produto</string>
    <string name="search">busca</string>
    <string name="search_supplier">buscar fornecedor</string>
    <string name="empty_cart">CARRINHO VAZIO</string>
    <string name="no_product">Nenhum produto foi adicionado. Continue\nsua busca por produtos retornando à\npágina inicial</string>
    <string name="change">Alterar</string>
    <string name="delivery_address">ENDEREÇO DE ENTREGA</string>
    <string name="finalize">FINALIZAR</string>
    <string name="delivery_tax">Valor frete</string>
    <string name="total_price">VALOR TOTAL</string>
    <string name="total_order">Total do pedido</string>
    <string name="go_to_initial_page">IR PARA PÁGINA INICIAL</string>
    <string name="empty">vazio</string>
    <string name="arrow">seta</string>
    <string name="my_data">Meus dados</string>
    <string name="change_password">Redefinir senha</string>
    <string name="my_orders">Meus pedidos</string>
    <string name="privacy_policy">Política de privacidade</string>
</resources>
