<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".SignUpActivity">

        <ViewSwitcher
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/colorAccent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/camera" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </ViewSwitcher>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="40dp"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                style="@style/EditTextStyle"
                android:hint="@string/store_name"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_marginTop="10dp"
                style="@style/EditTextStyle"
                android:hint="@string/e_mail"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextStyle"
                android:inputType="phone"
                android:layout_marginTop="10dp"
                android:hint="@string/main_phone"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextStyle"
                android:inputType="phone"
                android:layout_marginTop="10dp"
                android:hint="@string/aditional_phone"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextStyle"
                android:inputType="number"
                android:layout_marginTop="10dp"
                android:hint="@string/cnpj"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextStyle"
                android:inputType="number"
                android:layout_marginTop="10dp"
                android:hint="@string/postal_code"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextStyle"
                android:inputType="text"
                android:layout_marginTop="10dp"
                android:hint="@string/street"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    style="@style/EditTextStyle"
                    android:hint="@string/number"/>


                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="30dp"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    style="@style/EditTextStyle"
                    android:hint="@string/complement"/>

            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextStyle"
                android:layout_marginTop="10dp"
                android:inputType="text"
                android:hint="@string/neighborhood"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/EditTextStyle"
                android:inputType="textPassword"
                android:hint="@string/password"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                style="@style/EditTextStyle"
                android:hint="@string/confirm_password"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:text="@string/register"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>