<?xml version="1.0" encoding="utf-8"?>

<ViewSwitcher android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/switcher"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="60dp"
            android:paddingBottom="50dp"
            android:background="@color/colorPrimary">

            <LinearLayout
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:gravity="center"
                android:background="@drawable/empty_cart">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/multiply"
                    android:contentDescription="@string/empty"
                    android:tint="@color/gray"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginTop="24dp"
                android:text="@string/empty_cart"/>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/no_product"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="50dp"
            android:paddingStart="40dp"
            android:id="@+id/initial_page"
            android:paddingEnd="40dp"
            android:layout_gravity="center"
            android:text="@string/go_to_initial_page"
            style="@style/ButtonSecondaryStyle"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="34dp"
            android:background="@color/colorPrimary">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:text="@string/delivery_address"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Rua Das Marrecas, 20 - Sala 14\nCep: 22617-090"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:gravity="end"
                android:lines="1"
                android:textStyle="bold"
                android:text="@string/change"
                android:textColor="@color/colorAccent"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"
            android:id="@+id/cart"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="34dp"
            android:baselineAligned="false"
            android:layout_marginStart="34dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/total_order"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@android:color/black"
                    android:text="@string/delivery_tax"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="4dp"
                    android:text="@string/total_price"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="R$ 229,00"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@android:color/black"
                    android:text="R$ 20,00"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="4dp"
                    android:text="R$ 249,00"
                    />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:id="@+id/finalize"
            android:layout_gravity="center"
            android:text="@string/finalize"
            style="@style/ButtonTertiaryStyle"/>

    </LinearLayout>

</ViewSwitcher>